// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalMessage renders a message as expected with an image 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
            "elevation": 3,
            "margin": 16,
            "padding": 16,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
          },
          Object {},
          Object {},
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-end",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "marginVertical": 12,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "asset.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 100,
                  "width": 100,
                },
                undefined,
              ]
            }
            testID="aws-amplify__in-app-messaging--image"
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-start",
                "marginBottom": 8,
                "marginLeft": "auto",
                "marginRight": 8,
              },
              undefined,
            ]
          }
          testID="aws-amplify__in-app-messaging--close-button"
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
              }
            }
            style={
              Object {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "marginHorizontal": 4,
            "marginVertical": 12,
            "paddingLeft": 8,
          }
        }
      />
    </View>
  </RCTSafeAreaView>
</Modal>
`;

exports[`ModalMessage renders a message as expected without an image 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
            "elevation": 3,
            "margin": 16,
            "padding": 16,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
          },
          Object {},
          Object {},
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-end",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-start",
                "marginBottom": 8,
                "marginLeft": "auto",
                "marginRight": 8,
              },
              undefined,
            ]
          }
          testID="aws-amplify__in-app-messaging--close-button"
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
              }
            }
            style={
              Object {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "marginHorizontal": 4,
            "marginVertical": 12,
            "paddingLeft": 8,
          }
        }
      />
    </View>
  </RCTSafeAreaView>
</Modal>
`;
